# jeha

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.example.yml
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-project-scope-and-design-philosophy.md
docs/adr/: 001-design-decisions.md  002-hybrid-circadian-fanout.md
src/: calibration.rs  config_sync.rs  event.rs  lib.rs  lights_out.rs  main.rs  night_mode.rs  schedule.rs
src/api/: handlers.rs  mod.rs
src/automation/: action.rs  condition.rs  mod.rs  trigger.rs
src/circadian/: curve.rs  mod.rs
src/cli/: init.rs  mod.rs  run.rs  validate.rs
src/config/: defaults.rs  migrate.rs  mod.rs  types.rs  validate.rs
src/mcp/: mod.rs  tools.rs
src/mqtt/: mod.rs  publish.rs  z2m.rs
src/state/: mod.rs
