[package]
name = "jeha"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
schemars = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
bytes = "1"
axum = "0.8"

[profile.release]
strip = true
lto = true
